# small_models_presentation

./: .gitattributes  .gitignore  README.md  TALKING_POINTS.md  spec.mdown
demo1_tiny_transformer/: README.md  dataset.txt  generate_dataset.py  tiny_transformer_train.py  train_simple.py
demo1_tiny_transformer/mobile-app/: README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
demo1_tiny_transformer/mobile-app/composeApp/: build.gradle.kts
demo1_tiny_transformer/mobile-app/gradle/: libs.versions.toml
demo1_tiny_transformer/mobile-app/iosApp/iosApp/: Info.plist  (+1 more)
demo1_tiny_transformer/mobile-app/iosApp/iosApp.xcodeproj/: project.pbxproj
demo1_tiny_transformer/model_output/: tiny_transformer.onnx  tiny_transformer.onnx.data  vocab.json
demo2_function_gemma/: README.md  build.gradle.kts  download_model.sh  gradle.properties  settings.gradle.kts
demo2_function_gemma/composeApp/: build.gradle.kts
demo2_function_gemma/composeApp/src/native/cpp/: CMakeLists.txt  llama_wrapper.cpp  llama_wrapper.h
demo2_function_gemma/iosApp/: Podfile  project.yml
demo2_function_gemma/iosApp/iosApp/: ContentView.swift  Info.plist  iOSApp.swift
demo2_function_gemma/iosApp/iosApp.xcodeproj/: project.pbxproj
demo3_visual_llm/: README.md  settings.gradle.kts
demo3_visual_llm/composeApp/: build.gradle.kts
demo3_visual_llm/iosApp/: project.yml
demo3_visual_llm/iosApp/iosApp/: ContentView.swift  iOSApp.swift
scripts/: ensure-android-emulator.sh  ensure-ios-simulator.sh
slides/: README.md  index.html  package-lock.json  package.json
(+30 files in other folders)
